--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,8 @@ pluginManagement {
 	}
 }
 rootProject.name = 'eatgo'
-include 'eatgo-api'
+
+include 'eatgo-common'
+include 'eatgo-admin-api'
+include 'eatgo-customer-api'
+
