--- a/eatgo-customer-api/build.gradle
+++ b/eatgo-customer-api/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation project(':eatgo-common')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.h2database:h2'
 
